feat: optimize docker image with 220MB size from 447 MB